# grafana-zero-to-hero

./: .gitignore  readme.md
.github/workflows/: build-fastapi.yaml  build-jquery-app.yaml  build-vue-app.yaml  build.yaml
01-basic/: docker-compose.yaml  readme.md
01-basic/etc/grafana/: datasource.yml
02-best-practice/: docker-compose.yaml  readme.md
02-best-practice/etc/: k6-script.js
03-dashboard/: docker-compose.yaml  readme.md
03-dashboard/etc/: prometheus.yml
03-dashboard/etc/grafana/: grafana.ini
04-datasource/01-basic/: docker-compose.yaml  readme.md
04-datasource/02-prometheus/: docker-compose.yaml  readme.md
04-datasource/02-prometheus/app/: README.md  pyproject.toml
04-datasource/02-prometheus/etc/: k6-script.js  prometheus.yml
04-datasource/03-db/: docker-compose.yaml  readme.md
04-datasource/03-db/etc/: mysql-init.sql  postgres-init.sql  prometheus.yml  user_my.cnf
04-datasource/04-observability/: docker-compose.yaml  readme.md
04-datasource/04-observability/etc/: tempo.yml
04-datasource/05-plugins/: docker-compose.yaml  readme.md
04-datasource/05-plugins/etc/: dump.rdb  sql.py  sqlite.db
04-datasource/06-plugins/: docker-compose.yaml  readme.md
04-datasource/06-plugins/etc/: redis-data.txt
04-datasource/06-sql-expression/: docker-compose.yaml  readme.md
04-datasource/07-infinity/: docker-compose.yaml  readme.md
04-datasource/07-infinity/app/: pyproject.toml
05-plugins/: docker-compose.drilldown.yaml  docker-compose.yaml  readme.md
05-plugins/etc/: config.alloy  k6-script.js  prometheus.yml  tempo.yml
05-plugins/etc/grafana/: datasource.yml
05-plugins/grafanazerotohero-demoapp-app/: README.md  docker-compose.yaml  package-lock.json  package.json
05-plugins/grafanazerotohero-demoapp-app/.config/: docker-compose-base.yaml
05-plugins/grafanazerotohero-demoapp-app/src/: README.md  plugin.json
06-alerting/01-alert-rules/: docker-compose.yaml  readme.md
06-alerting/01-alert-rules/etc/: k6-script.js  (+1 more)
06-alerting/02-trigger-event/: .gitignore  docker-compose.yaml  readme.md
06-alerting/02-trigger-event/app/: pyproject.toml
06-alerting/03-grafana-on-call/: .env.template  .gitignore  docker-compose.yml  readme.md
07-management/01-users/: .gitignore  docker-compose.yaml  readme.md
07-management/02-grafana/: docker-compose.yaml  readme.md
07-management/03-iac/: docker-compose.yaml  readme.md
07-management/04-jsonnet/: docker-compose.grizzly.yaml  docker-compose.yaml  readme.md
app/: build.sh
app/fastapi/: Dockerfile  README.md  consumer.py  fake_todo.py  main.py  metrics.py  obs.py  pyproject.toml  utils.py
app/jquery-app/: index.html  readme.md
app/vue-app/: README.md  dockerfile  package-lock.json  package.json
use-case/business-dashboard/: deploy-simulation-01.sh  deploy-simulation-02.sh  docker-compose.yaml  readme.md
use-case/business-suite/: docker-compose.yaml  readme.md
use-case/demo-org-panel/: package-lock.json  package.json  readme.md
use-case/frontend-observability/: docker-compose.yaml  readme.md
use-case/gatus/: docker-compose.yaml  readme.md
use-case/grafana-llm/: docker-compose.yaml  k6-script.js  readme.md
use-case/kube-prometheus-stack/: app.yaml  k6-script.js  readme.md  values.yaml
use-case/otel-spm/: docker-compose.yaml  readme.md
(+103 files in other folders)
