[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "blueswen", email = "blueswen.tw@gmail.com" }
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.31.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
